--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,12 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #schedule table tbody td .expand.active + .about { max-height:600px; -webkit-transition:all ease 1s; -moz-transition:all ease 1s; -o-transition:all ease 1s; -ms-transition:all ease 1s; transition:all ease 1s; } 
 #schedule table tbody td .about p:first-child { padding:11px 13px; }
 #schedule table tbody td .about p { margin:0; padding:0 13px 13px; font-size:14px; color:rgb(134,133,133); }
+.mozilla-hackday { position:relative; clear:both; float:left; margin-top:85px; padding-bottom:25px; width:100%; background-color:rgb(0,77,147); }
+.mozilla-hackday:after { content:''; position:absolute; bottom:0; right:0; width:12px; height:10px; background:url('../img/bg-hackday.png') no-repeat; }
+.mozilla-hackday .logo { position:absolute; top:-50px; left:-40px; margin:0; width:445px; height:251px; background:url('../img/mozilla.svg') no-repeat; pointer-events:none; }
+.mozilla-hackday .info { float:right; margin-right:25px; padding-top:25px; width:527px; }
+.mozilla-hackday .description { margin-bottom:20px; font-size:14px; color:#FFF; }
+.mozilla-hackday .apply { padding:5px 10px; background-color:#FFF; font-family:'Bangers', cursive; font-size:20px; color:rgb(229,96,37); text-decoration:none; } 
 
 /* LOCALE */
 #locale { display:inline-block; clear:both; margin-top:200px; width:100%; }
@@ -468,6 +474,9 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay { background-color:#FFF; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin-top:12px; width:202px; height:49px; background-position:0 -201px; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .about { color:#000; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c { background-color:rgb(0,74,255); }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:13px 0 0 -8px; width:209px; height:66px; background-position:0 -554px; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .about { color:#FFF; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .about { float:left; margin:0; width:670px; font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:120%; color:rgb(255,255,255); text-align:left; }
 #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
 #sponsors .sponsors-wrapper .squares li { display:inline-block; margin-left:14px; }
@@ -485,7 +494,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .squares li .sponsor.join-us { width:221px; background:url('../img/bg-join-us.png') no-repeat; }
 #sponsors .sponsors-wrapper .be-a-sponsor { margin:auto auto; padding-bottom:80px; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:120%; color:rgb(255,255,255); text-align:center; }
 #sponsors .sponsors-wrapper .be-a-sponsor a { color:rgb(255,204,0); text-decoration:none; }
-#sponsors .sponsors-wrapper .supporters { padding-bottom:100px; }
+#sponsors .sponsors-wrapper .supporters { display:inline-block; padding-bottom:100px; }
 #sponsors .sponsors-wrapper .supporters .ttl-general { height:14px; width:203px; background-position:0 -1632px; }
 .LNG-en-us #sponsors .sponsors-wrapper .supporters .ttl-general { width:238px; background-position:0 -1633px; }
 #sponsors .sponsors-wrapper .supporters.educational .ttl-general { width:199px; background-position:-220px -1632px; }
@@ -499,9 +508,11 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .supporters a.abradi { margin-top:13px; width:168px; height:38px; background-position:0 -223px; }
 #sponsors .sponsors-wrapper .supporters a.casa-do-codigo { margin-top:13px; width:130px; height:38px; background-position:0 -281px; }
 #sponsors .sponsors-wrapper .supporters a.get-up { margin-top:13px; width:102px; height:53px; background-position:0 -339px; }
+#sponsors .sponsors-wrapper .supporters a.treinaweb { margin-top:13px; width:118px; height:51px; background-position:0 -412px; }
+#sponsors .sponsors-wrapper .supporters a.superplayer { margin-top:21px; width:180px; height:57px; background-position:0 -483px; }
 
 /* FOLLOW US */
-#follow-us { position:relative; clear:both; padding-top:60px; width:100%; background-color:#171314; } 
+#follow-us { position:relative; clear:both; padding-top:20px; width:100%; background-color:#171314; } 
 #follow-us .follow-us-container { position:relative; padding:70px 20px 0; margin:auto; width:980px; }
 #follow-us .follow-us-container .title { position:relative; margin:auto; width:438px; height:316px; background:url('../img/bg-twitter.png') no-repeat; z-index:2; }
 .LNG-en-us #follow-us .follow-us-container .title { background:url('../img/bg-twitter-en.png') no-repeat; }
@@ -735,6 +746,10 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#schedule table tbody td.speaker { padding-left:15px; }
 	#schedule table tbody td .info-wrapper { width:214px; }
 	#schedule table tbody td .expand { background-position:0 -105px; }
+	.mozilla-hackday { margin-top:20px; padding-top:20px; }
+	.mozilla-hackday .logo { position:static; margin:auto; width:133px; height:44px; background:url('../img/mobile/ico-general.png') no-repeat 0 -498px; }
+	.mozilla-hackday .info { padding-top:0; width:250px; }
+	.mozilla-hackday .apply { display:block; text-align:center; }
 	
 	/* LOCALE */
 	#locale { margin:60px 0 212px 0; }
@@ -779,6 +794,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .blackberry .sponsor a { margin:auto; height:26px; width:149px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .mozilla .sponsor a { margin:auto; height:44px; width:149px; background-position:0 -36px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin:auto; width:135px; height:19px; background-position:0 -132px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:auto; width:209px; height:66px; background-position:0 -330px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
     #sponsors .sponsors-wrapper .squares li { margin-left:0; width:145px !important; }
     #sponsors .sponsors-wrapper .squares li:nth-last-child(even) { margin-right:5px; }
@@ -803,6 +819,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .supporters a.casa-do-codigo { width:97px; height:29px; background-position:0 -183px; }
     #sponsors .sponsors-wrapper .supporters a.abradi { width:125px; height:29px; background-position:0 -144px; }
     #sponsors .sponsors-wrapper .supporters a.get-up { width:83px; height:43px; background-position:0 -222px; }
+    #sponsors .sponsors-wrapper .supporters a.treinaweb { width:81px; height:36px; background-position:0 -275px; }
+    #sponsors .sponsors-wrapper .supporters a.superplayer { width:163px; height:29px; background-position:0 -321px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin-top:37px; width:115px; height:27px; background-position:0 -292px; }
     #sponsors .sponsors-wrapper .be-a-sponsor { padding-bottom:40px; font-size:15px; }
     
@@ -1029,6 +1047,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#schedule table tbody td .about { width:354px; }
 	#schedule table tbody td .speak { width:233px; }
 	#schedule table tbody td .expand { background-position:0 -103px; }
+	.mozilla-hackday .logo { top:-19px; background-size:349px 193px; }
+	.mozilla-hackday .info { width:377px; }
 	
 	/* VENUE */
 	#locale { margin-top:200px; }
@@ -1092,6 +1112,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .blackberry .sponsor a { margin-top:60px; height:26px; width:147px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .mozilla .sponsor a { margin-top:31px; height:50px; width:149px; background-position:0 -40px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin-top:38px; width:135px; height:20px; background-position:0 -235px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:36px 0 0 -4px; width:149px; height:57px; background-position:0 -516px; }
     #sponsors .sponsors-wrapper .squares li { width:auto !important; }
     #sponsors .sponsors-wrapper .squares li a { width:167px; height:121px; }
     #sponsors .sponsors-wrapper .squares li .sponsor.join-us { width:168px; height:121px; background:url('../img/tablet/bg-join-us.png') no-repeat; }    
