--- a/css/main.css
+++ b/css/main.css
@@ -398,7 +398,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 .mozilla-hackday .logo { position:absolute; top:-50px; left:-40px; margin:0; width:445px; height:251px; background:url('../img/mozilla.svg') no-repeat; pointer-events:none; }
 .mozilla-hackday .info { float:right; margin-right:25px; padding-top:25px; width:527px; }
 .mozilla-hackday .description { margin-bottom:20px; font-size:14px; color:#FFF; }
-.mozilla-hackday .apply { padding:5px 10px; background-color:#FFF; font-family:'Bangers', cursive; font-size:20px; color:rgb(229,96,37); text-decoration:none; } 
+.mozilla-hackday .apply { padding:5px 10px; background-color:#FFF; font-family:'Bangers', cursive; font-size:20px; color:rgb(229,96,37); text-decoration:none; transition:all ease .7s; } 
+.mozilla-hackday .apply:hover { background-color:rgb(229,96,37); color:#FFF; }
 
 /* LOCALE */
 #locale { display:inline-block; clear:both; margin-top:200px; width:100%; }
@@ -477,6 +478,9 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c { background-color:rgb(0,74,255); }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:13px 0 0 -8px; width:209px; height:66px; background-position:0 -554px; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .about { color:#FFF; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .google { background-color:#FFF; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:2px 0 0 -8px; width:203px; height:52px; background-position:0 -728px; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .google .about { color:#000; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .about { float:left; margin:0; width:670px; font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:120%; color:rgb(255,255,255); text-align:left; }
 #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
 #sponsors .sponsors-wrapper .squares li { display:inline-block; margin-left:14px; }
@@ -487,7 +491,9 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .caelum { margin:43px 0 0 16px; width:191px; height:60px; background-position:0 -410px; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .adobe { margin:50px 0 0 28px; width:163px; height:44px; background-position:0 -137px; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe { background-color:rgb(236,26,44); }
-#sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin:48px 0 0 17px; height:42px; width:191px; background-position:0 -491px;} 
+#sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin:48px 0 0 17px; height:42px; width:191px; background-position:0 -491px;}
+#sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb { background-color:#0177BF; }
+#sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .sponsors-general { margin:35px auto; height:67px; width:155px; background-position:0 -640px;} 
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .wakanda { margin:45px 0 0 12px; width:193px; height:52px; background-position:0 -270px; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.heroku { background-color:rgb(41,38,77); }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:51px 0 0 31px; width:159px; height:48px; background-position:0 -342px; } 
@@ -510,6 +516,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .supporters a.get-up { margin-top:13px; width:102px; height:53px; background-position:0 -339px; }
 #sponsors .sponsors-wrapper .supporters a.treinaweb { margin-top:13px; width:118px; height:51px; background-position:0 -412px; }
 #sponsors .sponsors-wrapper .supporters a.superplayer { margin-top:21px; width:180px; height:57px; background-position:0 -483px; }
+#sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:30px; width:193px; height:26px; background-position:0 -545px; }
 
 /* FOLLOW US */
 #follow-us { position:relative; clear:both; padding-top:20px; width:100%; background-color:#171314; } 
@@ -574,7 +581,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 /* SOCIAL */
 .social-container { margin:auto; width:500px; }
 #social-networks { position:relative; float:left; padding:33px 0 0 17px; margin:auto auto 150px auto; width:300px; height:150px; }
-#social-networks .share-this { position:absolute; bottom:14px; left:30px; height:54px; width:139px; }
+#social-networks .share-this { position:absolute; bottom:14px; left:-5px; height:54px; width:139px; }
 #social-networks ul { padding:0; margin:0; }
 #social-networks ul li { display:inline-block; margin-right:10px; vertical-align:top; }
 .ticket-container { position:relative; float:right; padding-top:13px; }
@@ -795,6 +802,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .mozilla .sponsor a { margin:auto; height:44px; width:149px; background-position:0 -36px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin:auto; width:135px; height:19px; background-position:0 -132px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:auto; width:209px; height:66px; background-position:0 -330px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:auto; width:137px; height:35px; background-position:0 -460px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
     #sponsors .sponsors-wrapper .squares li { margin-left:0; width:145px !important; }
     #sponsors .sponsors-wrapper .squares li:nth-last-child(even) { margin-right:5px; }
@@ -803,8 +811,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .github { margin:35px auto; height:27px; width:101px; background-position:0 -91px; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .caelum { margin:35px auto; height:34px; width:109px; background-position:0 -248px; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .wakanda { margin:35px auto; height:30px; width:111px; background-position:0 -164px; }    
-    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.heroku { }
-    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:35px auto; height:34px; width:113px; background-position:0 -204px; }    
+    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:35px auto; height:34px; width:113px; background-position:0 -204px; }
+    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .treinaweb { margin:35px auto; height:44px; width:99px; background-position:0 -406px !important; }    
     #sponsors .sponsors-wrapper .supporters { display:inline-block; padding-bottom:20px; }
     #sponsors .sponsors-wrapper .supporters .ttl-general { width:153px; background-position:0 -637px; }
     .LNG-en-us #sponsors .sponsors-wrapper .supporters .ttl-general { background-position:0 -636px; }
@@ -820,7 +828,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .supporters a.abradi { width:125px; height:29px; background-position:0 -144px; }
     #sponsors .sponsors-wrapper .supporters a.get-up { width:83px; height:43px; background-position:0 -222px; }
     #sponsors .sponsors-wrapper .supporters a.treinaweb { width:81px; height:36px; background-position:0 -275px; }
-    #sponsors .sponsors-wrapper .supporters a.superplayer { width:163px; height:29px; background-position:0 -321px; }
+    #sponsors .sponsors-wrapper .supporters a.superplayer { margin-bottom:6px; width:123px; height:29px; background-position:0 -321px; }
+    #sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:15px; width:114px; height:17px; background-position:0 -360px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin-top:37px; width:115px; height:27px; background-position:0 -292px; }
     #sponsors .sponsors-wrapper .be-a-sponsor { padding-bottom:40px; font-size:15px; }
     
@@ -1113,14 +1122,16 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .mozilla .sponsor a { margin-top:31px; height:50px; width:149px; background-position:0 -40px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin-top:38px; width:135px; height:20px; background-position:0 -235px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:36px 0 0 -4px; width:149px; height:57px; background-position:0 -516px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin-top:16px; width:159px; height:42px; background-position:0 -659px; }
     #sponsors .sponsors-wrapper .squares li { width:auto !important; }
     #sponsors .sponsors-wrapper .squares li a { width:167px; height:121px; }
     #sponsors .sponsors-wrapper .squares li .sponsor.join-us { width:168px; height:121px; background:url('../img/tablet/bg-join-us.png') no-repeat; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .github { margin:43px 0 0 19px; height:35px; width:128px; background-position:0 -177px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .caelum { margin:41px 0 0 17px; height:42px; width:135px; background-position:0 -398px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .wakanda { margin:43px 0 0 11px; height:38px; width:142px; background-position:0 -278px; }
-    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:41px 0 0 14px; height:42px; width:140px; background-position:0 -336px; }
+    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:41px 0 0 14px; height:42px; width:140px; background-position:0 -336px; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin:40px 0 0 10px; height:34px; width:149px; background-position:0 -461px; }
+    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .sponsors-general { height:54px; width:123px; background-position:0 -585px; }
     #sponsors .sponsors-wrapper .supporters { display:inline-block; padding-bottom:40px; }
     #sponsors .sponsors-wrapper .supporters.educational .ttl-general { background-position:-220px -1151px; }
     .LNG-en-us #sponsors .sponsors-wrapper .supporters.educational .ttl-general { background-position:-283px -1136px; }
