--- a/css/main.css
+++ b/css/main.css
@@ -479,7 +479,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:13px 0 0 -8px; width:209px; height:66px; background-position:0 -554px; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .about { color:#FFF; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .google { background-color:#FFF; }
-#sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:2px 0 0 -8px; width:203px; height:52px; background-position:0 -728px; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:22px 0 0 -8px; width:203px; height:52px; background-position:0 -728px; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .about { color:#000; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .about { float:left; margin:0; width:670px; font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:120%; color:rgb(255,255,255); text-align:left; }
 #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
@@ -492,7 +492,6 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .adobe { margin:50px 0 0 28px; width:163px; height:44px; background-position:0 -137px; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe { background-color:rgb(236,26,44); }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin:48px 0 0 17px; height:42px; width:191px; background-position:0 -491px;}
-#sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb { background-color:#0177BF; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .sponsors-general { margin:35px auto; height:67px; width:155px; background-position:0 -640px;} 
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .wakanda { margin:45px 0 0 12px; width:193px; height:52px; background-position:0 -270px; }
 #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.heroku { background-color:rgb(41,38,77); }
@@ -517,6 +516,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .supporters a.treinaweb { margin-top:13px; width:118px; height:51px; background-position:0 -412px; }
 #sponsors .sponsors-wrapper .supporters a.superplayer { margin-top:21px; width:180px; height:57px; background-position:0 -483px; }
 #sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:30px; width:193px; height:26px; background-position:0 -545px; }
+#sponsors .sponsors-wrapper .supporters a.publisoft { margin-top:23px; width:170px; height:38px; background-position:0 -592px; }
 
 /* FOLLOW US */
 #follow-us { position:relative; clear:both; padding-top:20px; width:100%; background-color:#171314; } 
@@ -812,7 +812,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .caelum { margin:35px auto; height:34px; width:109px; background-position:0 -248px; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .wakanda { margin:35px auto; height:30px; width:111px; background-position:0 -164px; }    
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor .heroku { margin:35px auto; height:34px; width:113px; background-position:0 -204px; }
-    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .treinaweb { margin:35px auto; height:44px; width:99px; background-position:0 -406px !important; }    
+    #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.treinaweb .treinaweb { margin:31px auto; height:44px; width:99px; background-position:0 -406px !important; }    
     #sponsors .sponsors-wrapper .supporters { display:inline-block; padding-bottom:20px; }
     #sponsors .sponsors-wrapper .supporters .ttl-general { width:153px; background-position:0 -637px; }
     .LNG-en-us #sponsors .sponsors-wrapper .supporters .ttl-general { background-position:0 -636px; }
@@ -830,6 +830,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .supporters a.treinaweb { width:81px; height:36px; background-position:0 -275px; }
     #sponsors .sponsors-wrapper .supporters a.superplayer { margin-bottom:6px; width:123px; height:29px; background-position:0 -321px; }
     #sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:15px; width:114px; height:17px; background-position:0 -360px; }
+    #sponsors .sponsors-wrapper .supporters a.publisoft { margin-top:11px; width:110px; height:24px; background-position:0 -387px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin-top:37px; width:115px; height:27px; background-position:0 -292px; }
     #sponsors .sponsors-wrapper .be-a-sponsor { padding-bottom:40px; font-size:15px; }
     
