--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ body { background-color:#201C1D; }
 #menu .ballon { padding:11px 0 0 11px; width:45px; height:50px; background-position:0 -884px; }
 #menu .ballon:hover,
 #menu .ballon:focus { background-position:-98px -884px; }
-#menu .chapters-list { margin:0; padding:0; position:relative; top:25%; list-style:none; }
+#menu .chapters-list { margin:0; padding:0; position:relative; top:22%; list-style:none; }
 #menu .chapters-list li { position:relative; display:block; border-bottom:1px solid #464B4D; }
 #menu .chapters-list li:first-child { border-top:1px solid #464B4D; }
 #menu .chapters-list li a { position:relative; display:block; width:60px; height:62px;  }
@@ -481,6 +481,10 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .google { background-color:#FFF; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:22px 0 0 -8px; width:203px; height:52px; background-position:0 -728px; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .about { color:#000; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft { background-color:#FFF; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .sponsor a { margin:24px 0 0 -8px; width:208px; height:44px; background-position:0 -800px; }
+.LNG-en-us #sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .sponsor a { margin-top:11px; }
+#sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .about { color:#000; }
 #sponsors .sponsors-wrapper .sponsors .sponsor-list .about { float:left; margin:0; width:670px; font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:120%; color:rgb(255,255,255); text-align:left; }
 #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
 #sponsors .sponsors-wrapper .squares li { display:inline-block; margin-left:14px; }
@@ -517,6 +521,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #sponsors .sponsors-wrapper .supporters a.superplayer { margin-top:21px; width:180px; height:57px; background-position:0 -483px; }
 #sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:30px; width:193px; height:26px; background-position:0 -545px; }
 #sponsors .sponsors-wrapper .supporters a.publisoft { margin-top:23px; width:170px; height:38px; background-position:0 -592px; }
+#sponsors .sponsors-wrapper .supporters a.qi { margin-top:12px; width:93px; height:67px; background-position:0 -650px; }
 
 /* FOLLOW US */
 #follow-us { position:relative; clear:both; padding-top:20px; width:100%; background-color:#171314; } 
@@ -803,6 +808,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin:auto; width:135px; height:19px; background-position:0 -132px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:auto; width:209px; height:66px; background-position:0 -330px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin:auto; width:137px; height:35px; background-position:0 -460px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .sponsor a { margin:auto !important; width:155px; height:33px; background-position:0 -505px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list { padding:0; }
     #sponsors .sponsors-wrapper .squares li { margin-left:0; width:145px !important; }
     #sponsors .sponsors-wrapper .squares li:nth-last-child(even) { margin-right:5px; }
@@ -831,6 +837,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .supporters a.superplayer { margin-bottom:6px; width:123px; height:29px; background-position:0 -321px; }
     #sponsors .sponsors-wrapper .supporters a.kinghost { margin-top:15px; width:114px; height:17px; background-position:0 -360px; }
     #sponsors .sponsors-wrapper .supporters a.publisoft { margin-top:11px; width:110px; height:24px; background-position:0 -387px; }
+    #sponsors .sponsors-wrapper .supporters a.qi { margin-top:11px; width:72px; height:52px; background-position:0 -421px; }
     #sponsors .sponsors-wrapper .squares .sponsor-list .sponsor.adobe .sponsors-general { margin-top:37px; width:115px; height:27px; background-position:0 -292px; }
     #sponsors .sponsors-wrapper .be-a-sponsor { padding-bottom:40px; font-size:15px; }
     
@@ -1123,7 +1130,9 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .mozilla .sponsor a { margin-top:31px; height:50px; width:149px; background-position:0 -40px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .liferay .sponsor a { margin-top:38px; width:135px; height:20px; background-position:0 -235px; }
     #sponsors .sponsors-wrapper .sponsors .sponsor-list .w3c .sponsor a { margin:36px 0 0 -4px; width:149px; height:57px; background-position:0 -516px; }
-    #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin-top:16px; width:159px; height:42px; background-position:0 -659px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .google .sponsor a { margin-top:45px; width:159px; height:42px; background-position:0 -659px; }
+    #sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .sponsor a { margin-top:38px; width:160px; height:34px; background-position:0 -721px; }
+    .LNG-en-us #sponsors .sponsors-wrapper .sponsors .sponsor-list .microsoft .sponsor a { margin-top:31px; }
     #sponsors .sponsors-wrapper .squares li { width:auto !important; }
     #sponsors .sponsors-wrapper .squares li a { width:167px; height:121px; }
     #sponsors .sponsors-wrapper .squares li .sponsor.join-us { width:168px; height:121px; background:url('../img/tablet/bg-join-us.png') no-repeat; }    
